--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,19 @@ html, body, .container, #sidebar, #mapcontainer {
 }
 
 #sidebar {
-  background:#F6F6F4;
-  width: 320px;
+  background: #F0F0F0;
+  width: 250px;
 }
 
 #mapcontainer {
   flex-grow: 1;
+}
+
+#legend-filter {
+  z-index: 1;
+  top: 50px;
+  left: 230px;
+  position: fixed;
 }
 
 #map-intro {
@@ -35,7 +42,7 @@ h2 {
   left: 50%; /* place left corner of heading at center width of map container */
   position: fixed;
   margin: 0;
-  margin-left: -138.6px; /* add a negative left margin half the width of the heading to place center of heading at center width of map container */
+  margin-left: -219px; /* add a negative left margin half the width of the heading to place center of heading at center width of map container */
   z-index: 1; /* places heading on top of map container */
 }
 
@@ -146,7 +153,7 @@ h2::before {
   border-color: #1f1fff;
   background-color: #4949ff;
   outline: none;
-  color: white; 
+  color: white;
 }
 
 a:visited {
