--- a/css/styles.css
+++ b/css/styles.css
@@ -37,37 +37,17 @@ html, body, .container, #sidebar, #mapcontainer {
   margin-bottom: 30px;
 }
 
-h2 {
-  top: 0px; /* place heading on top edge of map container */
-  left: 50%; /* place left corner of heading at center width of map container */
-  position: fixed;
-  margin: 0;
-  margin-left: -219px; /* add a negative left margin half the width of the heading to place center of heading at center width of map container */
-  z-index: 1; /* places heading on top of map container */
-}
 
-h2::before {
-  content: "";
-  background-color: #484848;
-  opacity: 0.95;
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  border-radius: 10px;
-}
 
 #header {
   font-family: sans-serif;
   font-size: 20px;
   font-weight: bold;
-  color: white;
+  color: black;
   text-align: center;
   margin: 8px;
   margin-top: 8px;
-  z-index: 1;
-  position: relative;
+  margin-bottom: 30px;
 }
 
 .map-intro-subheading {
@@ -112,13 +92,13 @@ h2::before {
 }
 
 #subway-legend-vals {
-  display: block;
+  display: none;
   position: absolute;
   top: 137px;
 }
 
 #park-legend-vals {
-  display: block;
+  display: none;
   position: absolute;
   top: 92px;
 }
@@ -245,4 +225,68 @@ h2::before {
 
 a:visited {
   color: #0000EE;
+}
+
+#park-both-legend-vals {
+  display: block;
+  font-size: 11px;
+  font-family: sans-serif;
+  color: black;
+  position: absolute;
+  top: 95px;
+  margin-left: 2px;
+}
+
+#subway-both-legend-vals {
+  display: block;
+  font-size: 11px;
+  font-family: sans-serif;
+  color: black;
+  position: absolute;
+  top: 143px;
+  margin-left: 24px;
+}
+
+#subway-words-both-legend {
+  font-size: 10px;
+  font-family: sans-serif;
+  color: black;
+  font-weight: bold;
+  position: absolute;
+  top: 165px;
+  margin-left: 55px;
+  letter-spacing: 1.5px;
+  display: block;
+}
+
+#park-words-both-legend {
+  font-size: 10px;
+  font-family: sans-serif;
+  color: black;
+  font-weight: bold;
+  position: absolute;
+  top: 123px;
+  margin-left: 20px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+#park-only-legend-vals {
+  display: none;
+  font-size: 11px;
+  font-family: sans-serif;
+  color: black;
+  position: absolute;
+  top: 95px;
+  margin-left: 2px;
+}
+
+#subway-only-legend-vals {
+  display: none;
+  font-size: 11px;
+  font-family: sans-serif;
+  color: black;
+  position: absolute;
+  top: 143px;
+  margin-left: 2px;
 }
